--- a/fullstack/capstone/public/css/stylesheet.css
+++ b/fullstack/capstone/public/css/stylesheet.css
@@ -18,3 +18,9 @@
     letter-spacing: .1rem;
     font-size: 2.4rem !important;
 }
+
+.products{
+    font-family: 'Learninglings', sans-serif;
+    letter-spacing: .1rem;
+    font-size: 2.4rem !important;
+}
