--- a/fullstack/capstone/public/css/stylesheet.css
+++ b/fullstack/capstone/public/css/stylesheet.css
@@ -4,6 +4,13 @@
     font-family: 'Learninglings', sans-serif;
 }
 
+.h-01 {
+    font-family: 'Learninglings', sans-serif;
+    color: white;
+    letter-spacing: .1rem;
+    font-size: 2.4rem; 
+}
+
 .h-02{
     font-family: 'Learninglings', sans-serif;
     color: white;
