--- a/fullstack/capstone/public/css/stylesheet.css
+++ b/fullstack/capstone/public/css/stylesheet.css
@@ -1,5 +1,19 @@
 @import url('https://fonts.cdnfonts.com/css/learninglings-4');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    /* min-width: 100vw; */
+    background: #c31432;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #240b36, #c31432); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    /* position: fixed; */
+  }
+
 .navbarr{
     font-family: 'Learninglings', sans-serif;
 }
@@ -31,3 +45,13 @@
     letter-spacing: .1rem;
     font-size: 2.4rem !important;
 }
+
+.hero-text{
+    font-family: 'Nunito Sans', sans-serif;
+}
+
+.navbarr{
+    font-family: 'Nunito Sans', sans-serif;
+}
+@import url('https://fonts.cdnfonts.com/css/nunito-sans');
+@import url('https://fonts.cdnfonts.com/css/rilu');
