--- a/fullstack/capstone/public/css/stylesheet.css
+++ b/fullstack/capstone/public/css/stylesheet.css
@@ -5,14 +5,6 @@
     padding: 0;
     box-sizing: border-box;
   }
-  body {
-    /* min-width: 100vw; */
-    background: #c31432;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #240b36, #c31432);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #240b36, #c31432); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    /* position: fixed; */
-  }
 
 .navbarr{
     font-family: 'Learninglings', sans-serif;
@@ -31,7 +23,7 @@
     letter-spacing: .1rem;
     font-size: 2.4rem;
     margin-top: 5rem;
-    margin-bottom: 3.8rem;
+    padding-bottom: 3.8rem;
 }
 
 .hero-button {
@@ -52,6 +44,11 @@
 
 .navbarr{
     font-family: 'Nunito Sans', sans-serif;
+    box-shadow: none !important;
+}
+
+html {
+    height: 100%;
 }
 @import url('https://fonts.cdnfonts.com/css/nunito-sans');
 @import url('https://fonts.cdnfonts.com/css/rilu');
