--- a/fullstack/capstone/public/css/stylesheet.css
+++ b/fullstack/capstone/public/css/stylesheet.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/learninglings-4');
-
+@import url('https://fonts.cdnfonts.com/css/arya');
 * {
     margin: 0;
     padding: 0;
